# wifire

./: .dockerignore  .env.example  .gitignore  .golangci.yaml  Dockerfile  Makefile  README.md  api.go  builder.mk  docker-compose.yml  exponential.go  go.mod  go.sum  graph.go  grill.go  log.go  mqtt.go  prediction.md  systemstatus_enumer.go  units_enumer.go  update.go  user.go  wifire.go
.github/workflows/: build.yaml
cmd/: cmd.go  forecast.go  main.go  monitor.go  plot.go  root.go  version.go
dashboard/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
dashboard/frontend/: Cargo.toml  index.html  style.css
dashboard/frontend/src/: chart.rs  lib.rs
dashboard/scripts/: build-frontend.sh
dashboard/server/: Cargo.toml
dashboard/server/src/: main.rs  state.rs  tail.rs
dashboard/shared/: Cargo.toml
dashboard/shared/src/: lib.rs
