[package]
name = "wifire-dashboard-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wifire-dashboard"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wifire-dashboard-shared = { path = "../shared" }
